fix: PR 리뷰 반영 (#33)